--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -1,12 +1,12 @@
-server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    
-    root /usr/share/nginx/html;
-    index index.html index.htm;
+events {}
 
-    server_name _;
-    location / {
-        try_files $uri $uri/ =404;
+http {
+    server {
+        listen 443;
+	    listen [::]:443;
+
+        location / {
+            autoindex on;
+        }
     }
 }
