`server.conf` in progress

--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -1,12 +1,25 @@
 events {}
 
-http {
-    server {
-        listen 443;
-	    listen [::]:443;
+http
+{	
+    server
+    {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name mamaurai.42.fr;
+
+        root wordpress_path;
+        index wordpress_index;
+
+        ssl on;
+        ssl_certificate path1;
+        ssl_certificate_key path2;
+        ssl_protocols TLSv1.2 TLSv1.3;
+
 
         location / {
-            autoindex on;
+            
         }
+        
     }
 }
