`server.conf` is done

--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -12,14 +12,24 @@ http
         index wordpress_index;
 
         ssl on;
-        ssl_certificate path1;
-        ssl_certificate_key path2;
+        ssl_certificate /etc/nginx/ssl/key.pem;
+        ssl_certificate_key /etc/nginx/ssl/private/pkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
 
 
         location / {
-            
+                try_files $uri $uri/ /index.php?$args;
         }
-        
+
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            # fastcgi_pass wordpress:9000; // TODO error if wordpress launched
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            
+            fastcgi_intercept_errors on;
+        }    
     }
 }
