script created for mariadb + config_file

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,16 @@
 FROM debian:buster
 
 RUN apt-get -y update \
-	&& apt-get -y install mariadb-server
+	&& apt-get -y install mariadb-server \
+	&& apt-get -y install vim \
+	&& apt-get -y install procps
 
-COPY srcs/mariadb.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-COPY srcs/db_setup.sh /etc/mysql/db_setup.sh
+COPY configuration/mariadb.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY bin/setup_db.sh /usr/local/bin/setup_db.sh
+COPY bin/entrypoint.sh /usr/local/bin/entrypoint.sh
 
 EXPOSE 3306
 
-CMD ["/bin/sh", "/etc/mysql/db_setup.sh"]
+CMD ["/bin/sh", "/usr/local/bin/entrypoint.sh"]
+
+# Create var $MARIADB_BIN_PATH
