wordpress still in progress

--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -9,22 +9,23 @@ http
         server_name mamaurai.42.fr;
 
         root wordpress_path;
-        index wordpress_index;
+        index index.php;
 
         ssl on;
         ssl_certificate /etc/nginx/ssl/key.pem;
         ssl_certificate_key /etc/nginx/ssl/private/pkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.3;
 
 
         location / {
-                try_files $uri $uri/ /index.php?$args;
+                try_files $uri $uri/ /index.php?$query_string;
         }
 
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            # fastcgi_pass wordpress:9000; // TODO error if wordpress launched
+            # fastcgi_pass wordpress:9000; // TODO error
+            fastcgi_pass unix:/var/run/php5-fpm.sock;
             fastcgi_index index.php;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
