--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -9,6 +9,9 @@ COPY configuration/mariadb.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 COPY bin/setup_db.sh /usr/local/bin/setup_db.sh
 COPY bin/entrypoint.sh /usr/local/bin/entrypoint.sh
 
+RUN mkdir -p /var/run/mysqld
+RUN chmod 777 /var /var/run /var/run/mysqld /run/mysqld /var/lib/mysql
+
 EXPOSE 3306
 
 CMD ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
