--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -8,8 +8,8 @@ http
         listen [::]:443 ssl;
         server_name mamaurai.42.fr;
 
-        root wordpress_path;
-        index index.php;
+        # index index.php index.html index.htm;
+        # root /var/www/html;
 
         ssl on;
         ssl_certificate /etc/nginx/ssl/key.pem;
@@ -24,7 +24,7 @@ http
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            # fastcgi_pass wordpress:9000; // TODO error
+            # fastcgi_pass wordpress:9000; # TODO error
             fastcgi_pass unix:/var/run/php5-fpm.sock;
             fastcgi_index index.php;
             include fastcgi_params;
