--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,6 +3,7 @@ FROM debian:buster
 RUN apt-get -y update \
     && apt-get install -y php \
     && apt-get install -y mariadb-client \
+    && apt-get install -y php-fpm \
     # && apt-get install -y php5-fpm \
     # && apt-get install -y php5-mcrypt \
     # && apt-get install -y php5-curl \
@@ -13,7 +14,7 @@ EXPOSE 9000
 
 RUN mkdir -p /etc/local/wp-configuration
 
-COPY ./configuration/* /etc/local/wp-configuration
-COPY ./bin/setup-wp.sh /etc/local/wp-configuration
+COPY ./configuration/* /etc/local/wp-configuration/
+COPY ./bin/setup-wp.sh /etc/local/wp-configuration/
 
 # CMD ["/bin/sh", "/etc/local/wp-configuration/setup-wp.sh"]
