--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -8,14 +8,13 @@ http
         listen [::]:443 ssl;
         server_name mamaurai.42.fr;
 
-        index index.php index.html index.htm;
+        index index.php;
         root /var/www/html;
 
         ssl on;
         ssl_certificate /etc/nginx/ssl/key.pem;
         ssl_certificate_key /etc/nginx/ssl/private/pkey.pem;
         ssl_protocols TLSv1.3;
-
 
         location / {
                 try_files $uri $uri/ /index.php?$query_string;
@@ -24,13 +23,11 @@ http
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass wordpress:9000; # TODO error
-            # fastcgi_pass unix:/var/run/php5-fpm.sock;
+            fastcgi_pass wordpress:9000;
             fastcgi_index index.php;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            
-            fastcgi_intercept_errors on;
-        }    
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }  
     }
 }
