--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get -y update \
     # && apt-get install -y php5-mcrypt \
     # && apt-get install -y php5-curl \
     # && apt-get install -y php5-gd \
-    && apt-get install -y curl
+    && apt-get install -y curl \
+    && apt-get install -y procps
 
 EXPOSE 9000
 
@@ -18,4 +19,7 @@ RUN mkdir -p /etc/local/wp-configuration
 COPY ./configuration/* /etc/local/wp-configuration/
 COPY ./bin/setup-wp.sh /etc/local/wp-configuration/
 
-# CMD ["/bin/sh", "/etc/local/wp-configuration/setup-wp.sh"]
+CMD ["/bin/sh", "/etc/local/wp-configuration/setup-wp.sh"]
+
+
+# docker run -p 9000:9000 --net=net -d -v wordpress:/var/www/html -h="wordpress" -t wordpress
