--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "9000:9000"
     depends_on:
       - "mariadb"
+    restart: on-failure
     volumes:
       - "wordpress_volume:/var/www/html"
     networks:
