--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,14 +1,10 @@
 FROM debian:buster
 
-RUN apt-get -y update \
+RUN apt-get -y update \ 
     && apt-get install -y php \
     && apt-get install -y mariadb-client \
     && apt-get install -y php-fpm \
     && apt-get install -y php-mysql \
-    # && apt-get install -y php5-fpm \
-    # && apt-get install -y php5-mcrypt \
-    # && apt-get install -y php5-curl \
-    # && apt-get install -y php5-gd \
     && apt-get install -y curl \
     && apt-get install -y procps
 
@@ -18,6 +14,8 @@ RUN mkdir -p /etc/local/wp-configuration
 
 COPY ./configuration/* /etc/local/wp-configuration/
 COPY ./bin/setup-wp.sh /etc/local/wp-configuration/
+
+WORKDIR /var/www/html
 
 CMD ["/bin/sh", "/etc/local/wp-configuration/setup-wp.sh"]
 
