--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "3306:3306"
     networks:
       - net
+    env_file:
+      - variables.env
 
   wordpress:
     container_name: wordpress
@@ -27,6 +29,8 @@ services:
       - "wordpress_volume:/var/www/html"
     networks:
       - net
+    env_file:
+      - variables.env
 
   nginx:
     container_name: nginx
@@ -42,6 +46,8 @@ services:
       - "wordpress_volume:/var/www/html"
     networks:
       - net
+    env_file:
+      - variables.env
 
 volumes:
   wordpress_volume:
