--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -49,6 +49,23 @@ services:
     env_file:
       - variables.env
 
+  redis:
+    container_name: redis
+    hostname: redis
+    build:
+      context: ./requirements/redis
+      dockerfile: Dockerfile
+    ports:
+      - "6379:6379"
+    depends_on:
+      - "wordpress"
+    volumes:
+      - "wordpress_volume:/var/www/html"
+    networks:
+      - net
+    env_file:
+      - variables.env
+
 volumes:
   wordpress_volume:
   mariadb_volume:
