--- a/srcs/requirements/nginx/srcs/server.conf
+++ b/srcs/requirements/nginx/srcs/server.conf
@@ -1,7 +1,8 @@
 events {}
 
 http
-{	
+{
+	include mime.types;
     server
     {
         listen 443 ssl;
@@ -11,19 +12,10 @@ http
         index index.php;
         root /var/www/html;
 
-
-
         ssl on;
         ssl_certificate /etc/nginx/ssl/key.pem;
         ssl_certificate_key /etc/nginx/ssl/private/pkey.pem;
         ssl_protocols TLSv1.3;
-
-        location ~ \.css {
-            add_header  Content-Type    text/css;
-        }
-        location ~ \.js {
-            add_header  Content-Type    application/x-javascript;
-        }
 
         location / {
                 try_files $uri $uri/ /index.php?$query_string;
@@ -41,19 +33,7 @@ http
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
         } 
-
-        # types {
-        #     text/html                             html htm shtml;
-        #     text/css                              css;
-        #     text/xml                              xml;
-        #     image/gif                             gif;
-        #     image/jpeg                            jpeg jpg;
-        #     application/x-javascript              js;
-        #     application/atom+xml                  atom;
-        #     application/rss+xml                   rss;
-        #     ..........................................
-        #     other types here
-        #     ..........................................
-        # }
     }
 }
+
+# https://stackoverflow.com/questions/43338291/wordpress-doesnt-always-load-css
