--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -18,7 +18,7 @@ COPY ./bin/* /etc/local/wp-configuration/
 
 WORKDIR /var/www/html
 
-CMD ["/bin/sh", "/etc/local/wp-configuration/entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/etc/local/wp-configuration/entrypoint.sh"]
 
 
 # docker run -p 9000:9000 --net=net -d -v wordpress:/var/www/html -h="wordpress" -t wordpress
