project done + 1 bonus

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,10 +2,7 @@ FROM debian:buster
 
 RUN apt-get -y update \
 	&& apt-get -y install nginx \
-	&& apt-get -y install openssl \
-	&& apt-get -y install vim \
-	&& apt-get -y install curl \
-	&& apt-get -y install procps
+	&& apt-get -y install openssl
 
 RUN mkdir -p /etc/nginx/ssl/private
 RUN chmod 755 /etc/nginx/ssl/private
@@ -14,9 +11,3 @@ RUN openssl req -nodes -x509 -out /etc/nginx/ssl/key.pem -keyout /etc/nginx/ssl/
 COPY srcs/server.conf /etc/nginx/nginx.conf
 
 EXPOSE 443
-
-CMD ["nginx", "-g", "daemon off;"]
-
-# TODO: Delete vim and curl
-
-# docker run -p 443:443 --net=net -d -v wordpress:/var/www/html -h="nginx" -t nginx
