--- a/srcs/variables.env
+++ b/srcs/variables.env
@@ -1,6 +1,6 @@
 # MariaDB
 
-INITIALIZED_FILE=/var/lib/mysql
+DB_PATH=/var/run/mysqld
 DATABASE_NAME=Inception
 ADMIN_USERNAME=ben
 ADMIN_PASSWORD=lebenjos
@@ -21,4 +21,4 @@ DB_HOST=mariadb:3306
 
 # Others
 
-# VOLUME_PATH=/home/mamaurai/data/
+VOLUME_PATH=/home/mamaurai/data/
