--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,10 +9,14 @@ services:
       dockerfile: Dockerfile
     ports: 
       - "3306:3306"
+    restart: always
     networks:
       - net
     env_file:
       - variables.env
+    volumes:
+      - "mariadb_volume:/var/run/mysqld"
+    command: ["/usr/bin/mysqld_safe"]
 
   wordpress:
     container_name: wordpress
@@ -24,13 +28,14 @@ services:
       - "9000:9000"
     depends_on:
       - "mariadb"
-    restart: on-failure
+    restart: always
     volumes:
       - "wordpress_volume:/var/www/html"
     networks:
       - net
     env_file:
       - variables.env
+    command: ["php-fpm7.3", "-F"]
 
   nginx:
     container_name: nginx
@@ -42,12 +47,14 @@ services:
       - "443:443"
     depends_on:
       - "wordpress"
+    restart: always
     volumes:
       - "wordpress_volume:/var/www/html"
     networks:
       - net
     env_file:
       - variables.env
+    command: ["nginx", "-g", "daemon off;"]
 
   redis:
     container_name: redis
@@ -59,16 +66,28 @@ services:
       - "6379:6379"
     depends_on:
       - "wordpress"
+    restart: always
     volumes:
       - "wordpress_volume:/var/www/html"
     networks:
       - net
     env_file:
       - variables.env
+    command: ["redis-server", "--protected-mode no"]
 
 volumes:
   wordpress_volume:
+    driver: "local"
+    driver_opts:
+      o: bind 
+      type: "none"
+      device: /home/mamaurai/data/wordpress
   mariadb_volume:
+    driver: "local"
+    driver_opts:
+      o: bind 
+      type: "none"
+      device: /home/mamaurai/data/mariadb
 
 networks:
   net:
