--- a/srcs/variables.env
+++ b/srcs/variables.env
@@ -19,6 +19,10 @@ DOMAIN_NAME=mamaurai.42.fr
 WP_LOCAL_PATH=/etc/local/wp-configuration
 DB_HOST=mariadb:3306
 
+# Adminer
+
+ADMINER_VERSION=4.8.1
+
 # Others
 
 VOLUME_PATH=/home/mamaurai/data/
