--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,14 +8,19 @@ services:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
     ports: 
-      - "3306:3306"
-    restart: always
+      - "${MARIADB_PORT}:${MARIADB_PORT}"
+    restart: unless-stopped
     networks:
       - back
-    env_file:
-      - variables.env
     volumes:
-      - "mariadb_volume:/var/run/mysqld"
+      - "mariadb_volume:${DB_PATH}"
+    environment:
+      - DB_PATH=${DB_PATH}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - ADMIN_USERNAME=${ADMIN_USERNAME}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - USERNAME=${USERNAME}
+      - PASSWORD=${PASSWORD}
     command: ["/usr/bin/mysqld_safe"]
 
   wordpress:
@@ -25,17 +30,30 @@ services:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
     ports:
-      - "9000:9000"
+      - "${WP_PORT}:${WP_PORT}"
     depends_on:
       - "mariadb"
-    restart: always
+    restart: unless-stopped
     volumes:
-      - "wordpress_volume:/var/www/html"
+      - "wordpress_volume:${WP_PATH}"
     networks:
       - front
       - back
-    env_file:
-      - variables.env
+    environment:
+      - WP_PATH=${WP_PATH}
+      - WP_TITLE=${WP_TITLE}
+      - CONF_FILE_PATH=${CONF_FILE_PATH}
+      - DOMAIN_NAME=${DOMAIN_NAME}
+      - WP_LOCAL_PATH=${WP_LOCAL_PATH}
+      - ADMIN_MAIL=${ADMIN_MAIL}
+      - DB_HOST=${DB_HOST}
+      - EMAIL=${EMAIL}
+      # database
+      - DATABASE_NAME=${DATABASE_NAME}
+      - ADMIN_USERNAME=${ADMIN_USERNAME}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - USERNAME=${USERNAME}
+      - PASSWORD=${PASSWORD}
     command: ["php-fpm7.3", "-F"]
 
   nginx:
@@ -45,16 +63,16 @@ services:
       context: ./requirements/nginx
       dockerfile: Dockerfile
     ports:
-      - "443:443"
+      - "${NGINX_PORT}:${NGINX_PORT}"
     depends_on:
       - "wordpress"
-    restart: always
+    restart: unless-stopped
     volumes:
-      - "wordpress_volume:/var/www/html"
+      - "wordpress_volume:${WP_PATH}"
     networks:
       - front
-    env_file:
-      - variables.env
+    environment:
+      - NGINX_PORT=${NGINX_PORT}
     command: ["nginx", "-g", "daemon off;"]
 
   redis:
@@ -64,16 +82,16 @@ services:
       context: ./requirements/redis
       dockerfile: Dockerfile
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT}:${REDIS_PORT}"
     depends_on:
       - "wordpress"
-    restart: always
+    restart: unless-stopped
     volumes:
-      - "wordpress_volume:/var/www/html"
+      - "wordpress_volume:${WP_PATH}"
     networks:
       - front
-    env_file:
-      - variables.env
+    environment:
+      - REDIS_PORT=${REDIS_PORT}
     command: ["redis-server", "--protected-mode no"]
 
   adminer:
@@ -83,17 +101,18 @@ services:
       context: ./requirements/adminer
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "${ADMINER_PORT}:${ADMINER_PORT}"
     depends_on:
       - "mariadb"
-    restart: always
+    restart: unless-stopped
     volumes:
-      - "mariadb_volume:/var/run/mysqld"
+      - "mariadb_volume:${DB_PATH}"
     networks:
       - back
-    env_file:
-      - variables.env
-    command: ["php", "-S", "0.0.0.0:8000"]
+    environment:
+      - ADMINER_PORT=${ADMINER_PORT}
+      - ADMINER_VERSION=${ADMINER_VERSION}
+    command: ["php", "-S", "0.0.0.0:${ADMINER_PORT}"]
 
   vsftpd:
     container_name: vsftpd
@@ -107,13 +126,14 @@ services:
       - "40000-40009:40000-40009"
     depends_on:
       - "wordpress"
-    restart: always
+    restart: unless-stopped
     volumes:
-      - "wordpress_volume:/var/www/html"
+      - "wordpress_volume:${WP_PATH}"
     networks:
       - front
-    env_file:
-      - variables.env
+    environment:
+      - FTP_USER=${FTP_USER}
+      - FTP_PASSWORD=${FTP_PASSWORD}
     command: ["vsftpd", "/etc/vsftpd.conf"]
 
   nodejs:
@@ -122,12 +142,15 @@ services:
     build:
       context: ./requirements/nodejs
       dockerfile: Dockerfile
+      args:
+        - NODEJS_SETUP=${NODEJS_SETUP}
+        - NODEJS_PATH=${NODEJS_PATH}
     ports:
-      - "3000:3000"
-    restart: always
+      - "${NODEJS_PORT}:${NODEJS_PORT}"
+    restart: unless-stopped
     volumes:
-      - "nodejs_volume:/var/www/html/www"
-    command: ["npm", "--prefix", "/etc/local/nodejs", "start"]
+      - "nodejs_volume:${NODEJS_VOLUME}"
+    command: ["npm", "--prefix", "${NODEJS_PATH}", "start"]
 
   portainer:
     container_name: portainer
@@ -135,15 +158,21 @@ services:
     build:
       context: ./requirements/portainer
       dockerfile: Dockerfile
+      args:
+        - PORTAINER_VERSION=${PORTAINER_VERSION}
     ports:
-      - "9443:9443"
-    restart: always
+      - "${PORTAINER_PORT}:${PORTAINER_PORT}"
+    restart: unless-stopped
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "${DOCKER_SOCKET}:${DOCKER_SOCKET}"
       - "portainer_volume:/data"
     networks:
       - back
       - front
+    environment:
+      - PORTAINER_VERSION=${PORTAINER_VERSION}
+      - PORTAINER_PORT=${PORTAINER_PORT}
+    command: ["/opt/portainer/portainer", "--admin-password", "${PORTAINER_PASSWORD}"]
 
 
 volumes:
@@ -152,26 +181,26 @@ volumes:
     # driver_opts:
     #   o: bind 
     #   type: "none"
-    #   device: /home/mamaurai/data/wordpress
+    #   device: ${VOLUME_PATH}/wordpress
   mariadb_volume:
     # driver: "local"
     # driver_opts:
     #   o: bind 
     #   type: "none"
-    #   device: /home/mamaurai/data/mariadb
+    #   device: ${VOLUME_PATH}/mariadb
   nodejs_volume:
     # driver: "local"
     # driver_opts:
     #   o: bind 
     #   type: "none"
-    #   device: /home/mamaurai/data/nodejs
+    #   device: ${VOLUME_PATH}/nodejs
   portainer_volume:
     # driver: "local"
     # driver_opts:
     #   o: bind 
     #   type: "none"
-    #   device: /home/mamaurai/data/portainer
-    
+    #   device: ${VOLUME_PATH}/portainer
+
 networks:
   front:
     driver: bridge
