--- a/srcs/requirements/redis/Dockerfile
+++ b/srcs/requirements/redis/Dockerfile
@@ -1,4 +1,5 @@
 FROM debian:buster
 
 RUN apt-get -y update \
-    && apt-get install -y redis-server
+    && apt-get install -y \
+    redis-server
