--- a/srcs/.env
+++ b/srcs/.env
@@ -9,7 +9,7 @@ DB_PATH=/var/run/mysqld
 DATABASE_NAME=Inception
 ADMIN_USERNAME=ben
 ADMIN_PASSWORD=lebenjos
-USERNAME=mamaurai
+MY_USERNAME=mamaurai
 PASSWORD=Inception123
 
 # Wordpress
